20/11/2024:
	- Added TIFF output support for both regions (CVT=TIFF) and tiles (TTL=<resolution>,<tile number>). TIFF
	  encoder handles all bit depths, alpha channels, ICC profiles and basic TIFF and XMP metadata.
	- QLT argument can be used to specify both compression as well as quality using the syntax QLT=<compression>:<quality>.
	  For example QLT=WebP:50 will enable WebP compression within TIFF with a quality level of 50. Supported compression
	  schemes are None, LZW, Deflate, Zstd, JPEG and WebP. Default compression is Deflate with level 1 (fastest).


18/11/2024:
	- Correct bounding box calculation when max size has been set.
	- Fixed bug in View.cc's getResolution() when a max size has been set. Fixes https://github.com/ruven/iipsrv/issues/274


28/10/2024:
	- Added EXIF output support for JPEG, WebP and AVIF format writers. Reading of EXIF data is, however, only
	  currently supported by the JPEG input reader, so no TIFF EXIF input support for the moment.


27/10/2024:
	- Added ability to inject ICC profile and XMP metadata into pre-encoded tiles returned from TIFF images. These
	  are essentially raw bitstreams with no container. Works for both JPEG and WebP formats.


17/10/2024:
	- Added basic test script for use via "make check" that tests whether iipsrv can be executed and whether it
	  can create a log file.


16/10/2024:
	- Changes to how the requested width and height are handled by View class as well as how the resolution level
	  is calculated. Fixes problems with fitting images into bounding boxes and now correctly selects appropriate
	  resolution level in all cases. Fixes https://github.com/ruven/iipsrv/issues/273


02/10/2024:
	- Re-factoring of tile byte size check to work cleanly for both JPEG and WEBP and to avoid having to sometimes
	  reallocate memory


01/10/2024:
	- Added check for tile byte size when passing through pre-encoded JPEG tiles for TIFF as these can occasionally
	  be larger than the byte size of raw data.


25/09/2024: