@@ -519,4 +519,4 @@ This can work in conjunction with debugging mode or together with a web server i
 Please refer to the project site https://iipimage.sourceforge.io for further details
 
 ------------------------------------------------------------------------------------
-(c) 2000-2024 Ruven Pillay <ruven@users.sourceforge.net>
+(c) 2000-2025 Ruven Pillay <ruven@users.sourceforge.net>
